fixed margins on mobile devices

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -85,7 +85,7 @@ $headmargins : (
 $content-lengths : (
     mobile: (
         m-width: 90vw,
-        m-margin: 0 5vw,
+        m-margin: 1.5vh 5vw,
         m-padding: 1vh 0,
     ),
     tablet: (
